fix(a11y): border color contrast for focused inputs

--- a/packages/design-system/src/styles/theme/oc-form.scss
+++ b/packages/design-system/src/styles/theme/oc-form.scss
@@ -290,7 +290,7 @@ $internal-form-checkbox-indeterminate-image: "data:image/svg+xml;charset=UTF-8,%
 .oc-select:focus,
 .oc-textarea:focus {
   outline: none;
-  border-color: var(--oc-color-swatch-passive-default);
+  border-color: var(--oc-color-input-text-default);
   color: $form-focus-color;
 }
 
